Update tags so that only logo is colored

--- a/client/src/app/components/shared/assertion-tag/assertion-tag.component.html
+++ b/client/src/app/components/shared/assertion-tag/assertion-tag.component.html
@@ -1,4 +1,3 @@
-<nz-tag nzColor="purple">
-  <i nz-icon nzType="civic-assertion"></i>
-  {{ assertion.name }}
+<nz-tag >
+    <i nz-icon nzType="civic-assertion" nzTheme="twotone" nzTwotoneColor="#7243B5"></i> {{ assertion.name }}
 </nz-tag>
