--- a/client/src/app/components/shared/clinical-trial-tag/clinical-trial-tag.component.html
+++ b/client/src/app/components/shared/clinical-trial-tag/clinical-trial-tag.component.html
@@ -1,4 +1,4 @@
-<nz-tag nzColor="blue">
-  <i nz-icon nzType="audit"></i>
+<nz-tag>
+  <i nz-icon nzType="audit" class="clinical-trial-tag-icon"></i>
   {{ clinicalTrial.nctId }}
 </nz-tag>
