--- a/client/src/app/components/shared/comment-tag/comment-tag.component.html
+++ b/client/src/app/components/shared/comment-tag/comment-tag.component.html
@@ -1,4 +1,4 @@
-<nz-tag nzColor="blue">
-  <i nz-icon nzType="civic-comment"></i>
+<nz-tag>
+  <i nz-icon nzType="civic-comment" nzTheme="twotone" nzTwotoneColor="#44D8EF"></i>
   {{ comment.name }}
 </nz-tag>
