--- a/client/src/app/components/shared/disease-tag/disease-tag.component.html
+++ b/client/src/app/components/shared/disease-tag/disease-tag.component.html
@@ -1,4 +1,4 @@
-<nz-tag nzColor="magenta">
-  <i nz-icon nzType="civic-disease"></i>
+<nz-tag>
+  <i nz-icon nzType="civic-disease" nzTheme="twotone" nzTwotoneColor="#E62F76"></i>
   {{ disease.name }}
 </nz-tag>
