--- a/client/src/app/components/shared/evidence-tag/evidence-tag.component.html
+++ b/client/src/app/components/shared/evidence-tag/evidence-tag.component.html
@@ -1,10 +1,10 @@
-<nz-tag nzColor="gold"
+<nz-tag
   nz-popover
   [nzPopoverMouseEnterDelay]="0.5"
   [nzPopoverContent]="evidencePopover"
   nzPopoverPlacement="right"
   nzPopoverTrigger="hover">
-  <i nz-icon nzType="civic-evidence"></i>
+  <i nz-icon nzType="civic-evidence" nzTheme="twotone" nzTwotoneColor="#F68F37"></i>
   {{ evidence.name }}
 </nz-tag>
 <ng-template #evidencePopover>
