--- a/client/src/app/components/shared/flag-tag/flag-tag.component.html
+++ b/client/src/app/components/shared/flag-tag/flag-tag.component.html
@@ -1,4 +1,4 @@
-<nz-tag nzColor="red">
-  <i nz-icon nzType="civic-flag"></i>
+<nz-tag>
+  <i nz-icon nzType="civic-flag" nzTheme="twotone" nzTwotoneColor="#E24759"></i>
   {{ flag.name }}
 </nz-tag>
