--- a/client/src/app/components/shared/phenotype-tag/phenotype-tag.component.html
+++ b/client/src/app/components/shared/phenotype-tag/phenotype-tag.component.html
@@ -1,4 +1,4 @@
-<nz-tag nzColor="blue">
-  <i nz-icon nzType="civic-phenotype"></i>
+<nz-tag>
+  <i nz-icon nzType="civic-phenotype" nzTheme="twotone" nzTwotoneColor="#2A63B6"></i>
   {{ phenotype.name }}
 </nz-tag>
