--- a/client/src/app/components/shared/revision-tag/revision-tag.component.html
+++ b/client/src/app/components/shared/revision-tag/revision-tag.component.html
@@ -1,4 +1,4 @@
-<nz-tag nzColor="orange">
-  <i nz-icon nzType="civic-revision"></i>
+<nz-tag>
+  <i nz-icon nzType="civic-revision" nzTheme="twotone" nzTwotoneColor="#F0673A"></i>
   {{ revision.name }}
 </nz-tag>
