--- a/client/src/app/components/shared/variant-type-tag/variant-type-tag.component.html
+++ b/client/src/app/components/shared/variant-type-tag/variant-type-tag.component.html
@@ -1,4 +1,4 @@
-<nz-tag nzColor="green">
-  <i nz-icon nzType="apartment"></i>
+<nz-tag>
+  <i nz-icon nzType="apartment" class="variant-type-tag-icon"></i>
   {{ variantType.name }}
 </nz-tag>
