--- a/client/src/app/components/shared/org-tag/org-tag.component.html
+++ b/client/src/app/components/shared/org-tag/org-tag.component.html
@@ -1,8 +1,8 @@
-<nz-tag nzColor="cyan"
+<nz-tag
   nz-popover
   [nzPopoverContent]="orgPopover">
   <i nz-icon
-    nzType="civic-organization"></i> {{ org.name }}
+    nzType="civic-organization" nzTheme="twotone" nzTwotoneColor="#58A0C4"></i> {{ org.name }}
 </nz-tag>
 <ng-template #orgPopover>
   <cvc-org-popover [orgId]="org.id"></cvc-org-popover>
