Bugfix for displaying disease on assertion browse table

--- a/client/src/app/components/shared/assertions-browse/assertions-browse.component.html
+++ b/client/src/app/components/shared/assertions-browse/assertions-browse.component.html
@@ -141,7 +141,7 @@
                   </a>
                 </td>
                 <td>
-                  <ng-container *ngIf="aid.disease.displayName; else diseaseElse">
+                  <ng-container *ngIf="aid.disease.name; else diseaseElse">
                     <a routerLink="/diseases/{{aid.disease.id}}">
                       <cvc-disease-tag [disease]="aid.disease"></cvc-disease-tag>
                     </a>
