Move tag links into the tag components

--- a/client/src/app/components/shared/assertion-tag/assertion-tag.component.html
+++ b/client/src/app/components/shared/assertion-tag/assertion-tag.component.html
@@ -1,3 +1,15 @@
-<nz-tag >
-    <i nz-icon nzType="civic-assertion" nzTheme="twotone" nzTwotoneColor="#7243B5"></i> {{ assertion.name }}
-</nz-tag>
+<ng-container *ngIf="linked; else unlinked">
+  <a routerLink="/assertions/{{assertion.id}}">
+    <ng-template [ngTemplateOutlet]="tag"></ng-template>
+  </a>
+</ng-container>
+
+<ng-template #tag>
+  <nz-tag>
+      <i nz-icon nzType="civic-assertion" nzTheme="twotone" nzTwotoneColor="#7243B5"></i> {{ assertion.name }}
+  </nz-tag>
+</ng-template>
+
+<ng-template #unlinked>
+  <ng-template [ngTemplateOutlet]="tag"></ng-template>
+</ng-template>
