--- a/client/src/app/components/shared/phenotype-tag/phenotype-tag.component.html
+++ b/client/src/app/components/shared/phenotype-tag/phenotype-tag.component.html
@@ -1,4 +1,16 @@
-<nz-tag>
-  <i nz-icon nzType="civic-phenotype" nzTheme="twotone" nzTwotoneColor="#2A63B6"></i>
-  {{ phenotype.name }}
-</nz-tag>
+<ng-container *ngIf="linked; else unlinked">
+  <a routerLink="/phenotypes/{{phenotype.id}}">
+    <ng-template [ngTemplateOutlet]="tag"></ng-template>
+  </a>
+</ng-container>
+
+<ng-template #tag>
+  <nz-tag>
+    <i nz-icon nzType="civic-phenotype" nzTheme="twotone" nzTwotoneColor="#2A63B6"></i>
+    {{ phenotype.name }}
+  </nz-tag>
+</ng-template>
+
+<ng-template #unlinked>
+  <ng-template [ngTemplateOutlet]="tag"></ng-template>
+</ng-template>
