--- a/client/src/app/components/shared/variant-type-tag/variant-type-tag.component.html
+++ b/client/src/app/components/shared/variant-type-tag/variant-type-tag.component.html
@@ -1,4 +1,16 @@
-<nz-tag>
-  <i nz-icon nzType="apartment" class="variant-type-tag-icon"></i>
-  {{ variantType.name }}
-</nz-tag>
+<ng-container *ngIf="linked; else unlinked">
+  <a routerLink="/variant-types/{{variantType.id}}">
+    <ng-template [ngTemplateOutlet]="tag"></ng-template>
+  </a>
+</ng-container>
+
+<ng-template #tag>
+  <nz-tag>
+    <i nz-icon nzType="apartment" class="variant-type-tag-icon"></i>
+    {{ variantType.name }}
+  </nz-tag>
+</ng-template>
+
+<ng-template #unlinked>
+  <ng-template [ngTemplateOutlet]="tag"></ng-template>
+</ng-template>
