--- a/client/src/app/components/shared/variant-tag/variant-tag.component.html
+++ b/client/src/app/components/shared/variant-tag/variant-tag.component.html
@@ -1,11 +1,23 @@
-<nz-tag
-  nz-popover
-  [nzPopoverMouseEnterDelay]="0.5"
-  [nzPopoverContent]="popoverContent"
-  nzPopoverTrigger="hover">
-  <i nz-icon
-    nzType="civic-variant" nzTheme="twotone" nzTwotoneColor="#33B358"></i> {{ variant.name }}
-</nz-tag>
-<ng-template #popoverContent>
-  <cvc-variant-hovercard [variantId]="variant.id"></cvc-variant-hovercard>
+<ng-container *ngIf="linked; else unlinked">
+  <a routerLink="/variants/{{variant.id}}">
+    <ng-template [ngTemplateOutlet]="tag"></ng-template>
+  </a>
+</ng-container>
+
+<ng-template #tag>
+  <nz-tag
+    nz-popover
+    [nzPopoverMouseEnterDelay]="0.5"
+    [nzPopoverContent]="popoverContent"
+    nzPopoverTrigger="hover">
+    <i nz-icon
+      nzType="civic-variant" nzTheme="twotone" nzTwotoneColor="#33B358"></i> {{ variant.name }}
+  </nz-tag>
+  <ng-template #popoverContent>
+    <cvc-variant-hovercard [variantId]="variant.id"></cvc-variant-hovercard>
+  </ng-template>
+</ng-template>
+
+<ng-template #unlinked>
+  <ng-template [ngTemplateOutlet]="tag"></ng-template>
 </ng-template>
