--- a/client/src/app/views/evidence/evidence-summary/evidence-summary.component.html
+++ b/client/src/app/views/evidence/evidence-summary/evidence-summary.component.html
@@ -121,9 +121,11 @@
                     nzType="secondary">None Specified</span>
                 </ng-container>
                 <ng-container *ngIf="evidence.phenotypes.length > 0">
-                  <ng-container *ngFor="let ph of evidence.phenotypes">
-                    <cvc-phenotype-tag [phenotype]="ph"></cvc-phenotype-tag>
-                  </ng-container>
+                  <cvc-tag-list>
+                    <ng-container *ngFor="let ph of evidence.phenotypes">
+                      <cvc-phenotype-tag [phenotype]="ph"></cvc-phenotype-tag>
+                    </ng-container>
+                  </cvc-tag-list>
                 </ng-container>
               </nz-descriptions-item>
             </nz-descriptions>
@@ -144,11 +146,13 @@
 
                   <!-- one or more drugs -->
                   <ng-template ngPluralCase="other">
-                    <ng-container *ngFor="let drug of evidence.drugs">
-                      <a routerLink="/drugs/{{drug.id}}">
-                        <cvc-drug-tag [drug]="drug"></cvc-drug-tag>
-                      </a>
-                    </ng-container>
+                    <cvc-tag-list>
+                      <ng-container *ngFor="let drug of evidence.drugs">
+                        <a routerLink="/drugs/{{drug.id}}">
+                          <cvc-drug-tag [drug]="drug"></cvc-drug-tag>
+                        </a>
+                      </ng-container>
+                    </cvc-tag-list>
                   </ng-template>
                 </ng-container>
 
