--- a/client/src/app/views/assertions/assertions-summary/assertions-summary.component.html
+++ b/client/src/app/views/assertions/assertions-summary/assertions-summary.component.html
@@ -155,34 +155,39 @@
               nzSize="small"
               nzBordered="true"
               [nzColumn]="4">
+
+              <!-- gene tag -->
               <nz-descriptions-item nzTitle="Gene">
                 <cvc-gene-tag [gene]="assertion.gene"></cvc-gene-tag>
               </nz-descriptions-item>
 
+              <!-- variant tag -->
               <nz-descriptions-item nzTitle="Variant">
                 <cvc-variant-tag [variant]="assertion.variant"></cvc-variant-tag>
               </nz-descriptions-item>
 
+              <!-- variant origin -->
               <nz-descriptions-item nzTitle="Variant Origin">
                 <i nz-icon
                   [nzType]="assertion.variantOrigin | evidenceEnumDisplay: 'icon-name'"></i> {{ assertion.variantOrigin | evidenceEnumDisplay }}
               </nz-descriptions-item>
 
+              <!-- allele registriy id -->
               <nz-descriptions-item nzTitle="Allele Registry ID">
-                <a *ngIf="assertion.variant.alleleRegistry"
+                <a *ngIf="assertion.variant.alleleRegistry; else noAlleleRegistry"
                   target="_blank"
                   [href]="'https://reg.genome.network/allele/' + assertion.variant.alleleRegistryId + '.html'">
                   <nz-tag nzColor="default">
                     <i nz-icon
                       nzType='link'
-                      nzTheme='outline'></i> ClinGen: {{ assertion.variant.alleleRegistryId }}
+                      nzTheme='outline'></i>{{ assertion.variant.alleleRegistryId }}
                   </nz-tag>
                 </a>
-                <span nz-typography
-                  nzType="secondary"
-                  *ngIf="!assertion.variant.alleleRegistry">None Provided</span>
+                <ng-template #noAlleleRegistry>
+                  <span nz-typography
+                    nzType="secondary">None provided</span>
+                </ng-template>
               </nz-descriptions-item>
-
             </nz-descriptions>
           </nz-space-item>
 
