--- a/client/src/app/components/shared/variant-tag/variant-tag.component.html
+++ b/client/src/app/components/shared/variant-tag/variant-tag.component.html
@@ -14,7 +14,7 @@
       nzType="civic-variant" nzTheme="twotone" nzTwotoneColor="#33B358"></i> {{ variant.name }}
   </nz-tag>
   <ng-template #popoverContent>
-    <cvc-variant-hovercard [variantId]="variant.id"></cvc-variant-hovercard>
+    <cvc-variant-popover [variantId]="variant.id"></cvc-variant-popover>
   </ng-template>
 </ng-template>
 
